// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SLinkHub > renders with multiple categories correctly 1`] = `
<section class="my-30">
  <div class="mx-auto">
    <div class="pt-12">
      <div>
        <span class="
          font-bold
          inline-block
          py-4
          text-3xl
        ">
          Our Categories
        </span>
      </div>
    </div>
    <div class="
      gap-4
      grid
      grid-cols-1
      lg:grid-cols-4
      md:grid-cols-3
      mt-5
      sm:grid-cols-2
    ">
      <div class="border-t">
        <a
          class="
            flex
            font-medium
            mt-3
          "
          href="/linkhub/cat-1/"
        >Category One</a>
      </div>
      <div class="border-t">
        <a
          class="
            flex
            font-medium
            mt-3
          "
          href="/linkhub/cat-2/"
        >Category Two</a>
      </div>
      <div class="border-t">
        <a
          class="
            flex
            font-medium
            mt-3
          "
          href="/linkhub/cat-3/"
        >Category Three</a>
      </div>
    </div>
  </div>
</section>
`;

exports[`SLinkHub > renders with no categories correctly 1`] = `
<section class="my-30">
  <div class="mx-auto">
    <div class="pt-12">
      <div>
        <span class="
          font-bold
          inline-block
          py-4
          text-3xl
        "></span>
      </div>
    </div>
    <div class="
      gap-4
      grid
      grid-cols-1
      lg:grid-cols-4
      md:grid-cols-3
      mt-5
      sm:grid-cols-2
    "></div>
  </div>
</section>
`;

exports[`SLinkHub > renders with one category correctly 1`] = `
<section class="my-30">
  <div class="mx-auto">
    <div class="pt-12">
      <div>
        <span class="
          font-bold
          inline-block
          py-4
          text-3xl
        ">
          Featured Links
        </span>
      </div>
    </div>
    <div class="
      gap-4
      grid
      grid-cols-1
      lg:grid-cols-4
      md:grid-cols-3
      mt-5
      sm:grid-cols-2
    ">
      <div class="border-t">
        <a
          class="
            flex
            font-medium
            mt-3
          "
          href="/linkhub/category-1/"
        >Category 1</a>
      </div>
    </div>
  </div>
</section>
`;
